<resources>
    <string name="app_name">CMPUT301-Team-Project</string>
    <string name="app_title">Moodster</string>
    <string name="trigger">Trigger</string>
    <string name="anger">Anger</string>
    <string name="confusion">Confusion</string>
    <string name="disgust">Disgust</string>
    <string name="fear">Fear</string>
    <string name="happiness">Happiness</string>
    <string name="sadness">Sadness</string>
    <string name="shame">Shame</string>
    <string name="surprise">Surprise</string>
    <string name="emotional_state_dropdown_hint">Select Emotional State…</string>
    <string name="no_emotional_state_error_msg">Emotional State is required</string>
    <string name="emoji_anger">😡</string>
    <string name="emoji_confusion">😕</string>
    <string name="emoji_disgust">🤢</string>
    <string name="emoji_fear">😱</string>
    <string name="emoji_happiness">😊</string>
    <string name="emoji_sadness">☹️</string>
    <string name="emoji_shame">😳</string>
    <string name="emoji_surprise">🫢</string>
    <string name="emoji_emotionless">😶</string>
    <string name="social_alone">Alone</string>
    <string name="social_pair">With one other person</string>
    <string name="social_several">With two to several people</string>
    <string name="social_crowd">With a crowd</string>
    <string name="social_situation_dropdown_hint">Select Social Situation…</string>
    <string name="add_image">Add Image</string>
    <string name="mood_image_preview">Mood Image Preview</string>
    <string name="remove_image">Remove Image</string>
    <string name="image_size_exceeded">Image exceeds the size limit.</string>
    <string name="image_invalid">Invalid image. Please try again</string>
    <string name="mood_disgusted">Disgusted</string>
    <string name="mood_anger">Angry</string>
    <string name="mood_confusion">Confused</string>
    <string name="mood_fear">Scared</string>
    <string name="mood_happiness">Happy</string>
    <string name="mood_sadness">Sad</string>
    <string name="mood_shame">Ashamed</string>
    <string name="mood_surprise">Surprised</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="trigger_too_many_chars">Trigger must be under %d characters</string>
    <string name="empty_username_error">Username cannot be empty</string>
    <string name="empty_password_error">Password cannot be empty</string>
    <string name="too_short_password_error">Password should be at least 6 characters</string>
    <string name="username_exists_error">Username already taken</string>
    <string name="filter_moods_by_time_title">Filter by time:</string>
    <string name="filter_moods_by_day">Past Day</string>
    <string name="filter_moods_by_week">Past week</string>
    <string name="filter_moods_by_month">Past month</string>
    <string name="filter_by_text_hint">Find text in moods</string>
    <string name="requests">Requests</string>
    <string name="find_people">People</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="remove">Remove</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="follow_request">requested to follow you</string>
    <string name="requested">Requested</string>
    <string name="no_follow_requests">You have no follow requests</string>
    <string name ="add_comment">Add a comment</string>
    <string name="i_am">I am</string>
    <string name="is">is</string>
    <string name="search_location">Search location</string>
    <string name="use_my_current_location">Use my current location</string>
    <string name="moods_within_5_km">Only moods within 5 km of my current location</string>
    <string name="show_more">Show more</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="privacy_policy">© Privacy Policy</string>
    <string name="Slogan">Track your emotions. Improve your wellbeing.</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="create_your_account">Create your account</string>
    <string name="display_name">Display name</string>
    <string name="comments">Comments</string>
    <string name="profile">Profile</string>
    <string name="feed">My Feed</string>
    <string name="my_events">My Moods</string>
    <string name="mentions">Mentions</string>
    <string name="emotion">Emotion</string>
    <string name="social_situation">Social Situation</string>
    <string name="location">Location</string>
    <string name="post">Post</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="filter_your_moods">Filter Your Moods</string>
    <string name="select_mood">Select Mood</string>
    <string name="location_filter">Location Filter</string>

</resources>