<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/user_icon"
        android:title="@string/profile"
        android:icon="@drawable/baseline_group_24" />

    <item
        android:id="@+id/mood_following_icon"
        android:title="@string/feed"
        android:icon="@drawable/ic_baseline_home_24" />

    <item
        android:id="@+id/mood_history_icon"
        android:icon="@drawable/baseline_history_24"
        android:title="@string/my_events" />
    <item
        android:id="@+id/mentioned_icon"
        android:title="@string/mentions"
        android:icon="@drawable/ic_baseline_chat_24" />
</menu>