<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MoodHistoryFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="6dp">

        <ImageButton
            android:id="@+id/add_mood_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@null"
            android:scaleType="fitXY"
            android:layout_alignParentLeft="true"
            android:src="@drawable/ic_baseline_add_24" />

        <!-- change the button src if neccesary -->
        <ImageButton
            android:id="@+id/filter_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@null"
            android:scaleType="fitXY"
            android:layout_alignParentRight="true"
            android:src="@android:drawable/ic_menu_sort_by_size"
            android:tintMode="src_in"
            app:tint="@color/black" />

    </RelativeLayout>

    <include layout="@layout/mood_list_layout"/>
</LinearLayout>